--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,17 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 
 [dependencies]
 anyhow = "1.0"
+atty = "0.2"
 lazy-regex = "2.2"
 scraper = "0.12"
+
+[dependencies.clap]
+version = "3.0.0-beta.2"
+default-features = false
+features = [
+    "std",
+    "color",
+]
 
 [dependencies.reqwest]
 version = "0.11"
