Prompt for search term in interactive mode if not given
Using requestty
Move Result alias to crate::error
Use Result alias in lib
Better hide debug print in lib (requires debug mode)
Clap supports being given no search term, provided
-n/--non-interactive isn't specified
Test for the above ^
Fix bug where search term can only be one word
Test for the above ^
if given as unquoted arguments to program
RuntimeConfig::new now returns Result as errors can
occur with requestty
Tests updated for the above ^
Add new variants to RunError to account for requestty
errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 atty = "0.2"
 lazy-regex = "2.2"
 scraper = "0.12"
+requestty = "0.1"
 
 [dependencies.clap]
 version = "3.0.0-beta.2"
