--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ crossterm = "0.20"
 lazy-regex = "2.2"
 scraper = "0.12"
 requestty = "0.1"
+serde_json = { version = "1.0", optional = true }
+serde_yaml = { version = "0.8", optional = true }
 
 [dependencies.clap]
 version = "3.0.0-beta.2"
@@ -30,6 +32,17 @@ version = "0.11"
 features = [
     "blocking",
 ]
+
+[dependencies.serde]
+version = "1.0"
+optional = true
+features = [
+    "derive",
+]
+
+[features]
+json = ["serde", "serde_json"]
+yaml = ["serde", "serde_yaml"]
 
 [profile.release]
 lto = true
