--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,14 @@
 name = "imdb-id"
 description = "Get IMDb IDs using a commandline search tool"
 categories = ["command-line-utilities"]
-version = "1.0.4"
+version = "1.0.5"
 edition = "2018"
 authors = ["alpha-tango-kilo <git@heyatk.com>"]
 readme = "README.md"
 license = "GPL-3.0-only"
 homepage = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
+exclude = ["fluff/"]
 
 [dependencies]
 atty = "0.2"
