--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "imdb-id"
 description = "Get IMDb IDs using a commandline search tool"
 categories = ["command-line-utilities"]
-version = "1.0.6"
+version = "2.0.0-alpha"
 edition = "2018"
 authors = ["alpha-tango-kilo <git@heyatk.com>"]
 readme = "README.md"
@@ -16,7 +16,7 @@ crossterm = "0.20"
 lazy-regex = "2.2"
 scraper = "0.12"
 requestty = "0.1"
-serde_json = { version = "1.0", optional = true }
+serde_json = "1.0"
 serde_yaml = { version = "0.8", optional = true }
 
 [dependencies.clap]
@@ -35,15 +35,13 @@ features = [
 
 [dependencies.serde]
 version = "1.0"
-optional = true
 features = [
     "derive",
 ]
 
 [features]
 default = []
-json = ["serde", "serde_json"]
-yaml = ["serde", "serde_yaml"]
+yaml = ["serde_yaml"]
 
 [profile.release]
 lto = true
