--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "imdb-id"
 description = "Get IMDb IDs using a commandline search tool"
 categories = ["command-line-utilities"]
-version = "2.0.0-alpha"
+version = "2.0.0-beta"
 edition = "2018"
 authors = ["alpha-tango-kilo <git@heyatk.com>"]
 readme = "README.md"
@@ -13,8 +13,7 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 [dependencies]
 atty = "0.2"
 crossterm = "0.20"
-lazy-regex = "2.2"
-scraper = "0.12"
+once_cell = "1.8"
 requestty = "0.1"
 serde_json = "1.0"
 serde_yaml = { version = "0.8", optional = true }
