--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 [dependencies]
 atty = "0.2"
 crossterm = "0.20"
-once_cell = "1.8"
 requestty = "0.1"
 serde_json = "1.0"
 serde_yaml = { version = "0.8", optional = true }
@@ -37,6 +36,9 @@ version = "1.0"
 features = [
     "derive",
 ]
+
+[dev-dependencies]
+once_cell = "1.8"
 
 [features]
 default = []
