--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0"
 serde_yaml = { version = "0.8", optional = true }
 
 [dependencies.clap]
-version = "3.0.0-beta.4"
+version = "=3.0.0-beta.5"
 default-features = false
 features = [
     "std",
