--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,7 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 
 [dependencies]
 atty = "0.2"
-crossterm = "0.20"
 dirs = "4.0"
-requestty = "0.1"
 serde_json = "1.0"
 serde_yaml = { version = "0.8", optional = true }
 
@@ -25,6 +23,10 @@ features = [
     "std",
     "color",
 ]
+
+[dependencies.dialoguer]
+version = "0.9"
+default-features = false
 
 [dependencies.reqwest]
 version = "0.11"
