--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde_yaml = { version = "0.8", optional = true }
 once_cell = "1.9"
 
 [dependencies.clap]
-version = "=3.0.0-beta.5"
+version = "3.0"
 default-features = false
 features = [
     "std",
