--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 atty = "0.2"
 dirs = "4.0"
 serde_json = "1.0"
-serde_yaml = { version = "0.8", optional = true }
+# https://rustsec.org/advisories/RUSTSEC-2018-0005.html
+serde_yaml = { version = ">=0.8.4", optional = true }
 once_cell = "1.9"
 
 [dependencies.clap]
@@ -42,7 +43,8 @@ features = [
 ]
 
 [dependencies.smallvec]
-version = "1.6"
+# https://rustsec.org/advisories/RUSTSEC-2021-0003.html
+version = ">=1.6.1"
 features = [
     "serde",
 ]
