--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 [dependencies]
 atty = "0.2"
 dirs = "4.0"
+lazy_static = "1.4"
 serde_json = "1.0"
 # https://rustsec.org/advisories/RUSTSEC-2018-0005.html
 serde_yaml = { version = ">=0.8.4", optional = true }
-once_cell = "1.9"
 
 [dependencies.clap]
 version = "3.0"
@@ -48,6 +48,9 @@ version = ">=1.6.1"
 features = [
     "serde",
 ]
+
+[dev-dependencies]
+once_cell = "1.9"
 
 [features]
 default = []
