--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "Get IMDb IDs using a commandline search tool"
 categories = ["command-line-utilities"]
 version = "2.0.2"
 edition = "2018"
+rust-version = "1.58"
 authors = ["alpha-tango-kilo <git@heyatk.com>"]
 readme = "README.md"
 license = "GPL-3.0-only"
