--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1.4"
 serde_json = "1.0"
 # https://rustsec.org/advisories/RUSTSEC-2018-0005.html
 serde_yaml = { version = ">=0.8.4", optional = true }
+urlencoding = "2.1"
 
 [dependencies.clap]
 version = "3.0"
@@ -31,10 +32,10 @@ features = [
 version = "0.9"
 default-features = false
 
-[dependencies.reqwest]
-version = "0.11"
+[dependencies.minreq]
+version = "2.5"
 features = [
-    "blocking",
+    "https-rustls",
 ]
 
 [dependencies.serde]
