Specify Rust version in CI image, show dependency badge from Codeberg repo
Update dependencies 😉

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,14 +1,14 @@
 pipeline:
   build:
-    image: rust
+    image: rust:1.58
     commands:
       - cargo build
   test:
-    image: rust
+    image: rust:1.58
     commands:
       - cargo test --all-features
   lint:
-    image: rust
+    image: rust:1.58
     commands:
       - rustup component add rustfmt clippy
       - cargo fmt -- --check --files-with-diff
