--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,22 +34,16 @@ default-features = false
 
 [dependencies.minreq]
 version = "2.5"
-features = [
-    "https-rustls",
-]
+features = ["https-rustls"]
 
 [dependencies.serde]
 version = "1.0"
-features = [
-    "derive",
-]
+features = ["derive"]
 
 [dependencies.smallvec]
 # https://rustsec.org/advisories/RUSTSEC-2021-0003.html
 version = ">=1.6.1"
-features = [
-    "serde",
-]
+features = ["serde"]
 
 [dev-dependencies]
 once_cell = "1.9"
