--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ dirs = "4.0"
 humantime = "2.1"
 itertools = "0.10"
 lazy_static = "1.4"
+opener = "0.5"
 serde_json = "1.0"
 # https://rustsec.org/advisories/RUSTSEC-2018-0005.html
 serde_yaml = { version = ">=0.8.4", optional = true }
