--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,11 @@ features = ["https-rustls"]
 version = "1.0"
 features = ["derive"]
 
+[dependencies.textwrap]
+version = "0.14"
+default-features = false
+features = ["smawk"]
+
 [dev-dependencies]
 once_cell = "1.9"
 
