Run tests both with and without `yaml` feature

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -6,6 +6,7 @@ pipeline:
   test:
     image: rust:1.58
     commands:
+      - cargo test
       - cargo test --all-features
   lint:
     image: rust:1.58
