--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ opener = "0.5"
 serde_json = "1.0"
 # https://rustsec.org/advisories/RUSTSEC-2018-0005.html
 serde_yaml = { version = ">=0.8.4", optional = true }
+# https://rustsec.org/advisories/RUSTSEC-2021-0003.html
+smallvec = ">=1.6.1"
 thiserror = "1.0"
 urlencoding = "2.1"
 
@@ -42,11 +44,6 @@ features = ["https-rustls"]
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
-
-[dependencies.smallvec]
-# https://rustsec.org/advisories/RUSTSEC-2021-0003.html
-version = ">=1.6.1"
-features = ["serde"]
 
 [dev-dependencies]
 once_cell = "1.9"
