Use itertools and time-in-place to process search term from clap
Instead of old-fashioned hand-rolled version from when I wasn't using itertools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde_yaml = { version = ">=0.8.4", optional = true }
 # https://rustsec.org/advisories/RUSTSEC-2021-0003.html
 smallvec = ">=1.6.1"
 thiserror = "1.0"
+trim-in-place = "0.1"
 urlencoding = "2.1"
 
 [dependencies.clap]
