--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 
 [dependencies]
+bitflags = "1.3"
 crossterm = "0.22"
 dirs = "4.0"
 humantime = "2.1"
