--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ crossterm = "0.22"
 dirs = "4.0"
 humantime = "2.1"
 itertools = "0.10"
+jsonxf = "1.1"
 lazy-regex = "2.2"
 lazy_static = "1.4"
 opener = "0.5"
