--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,16 @@ tui = "0.19"
 urlencoding = "2.1"
 
 [dependencies.clap]
-version = "3.1"
+version = "4.0"
 default-features = false
-features = ["std"]
+features = [
+    "std",
+    "help",
+    "usage",
+    "color",
+    "error-context",
+    "deprecated",
+]
 
 [dependencies.dialoguer]
 version = "0.10"
