--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,16 @@
 max_width = 80
-#imports_granularity = "Crate"
+match_block_trailing_comma = true
+use_field_init_shorthand = true
+use_try_shorthand = true
+# Nightly
+condense_wildcard_suffixes = true
+format_code_in_doc_comments = true
+format_macro_matchers = true
+format_strings = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
+imports_layout = "Vertical"
+normalize_doc_attributes = true
+overflow_delimited_expr = true
+reorder_impl_items = true
+wrap_comments = true
