Revert "Use nightly rustfmt & update style"
This reverts commit b8f760c3f05ca08dbe354483c0a92586019faf0f.

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -9,8 +9,9 @@ pipeline:
       - cargo test --locked
       - cargo test --locked --all-features
   lint:
-    image: rustdocker/rustfmt_clippy:nightly
+    image: rust:1.58
     commands:
+      - rustup component add rustfmt clippy
       - cargo fmt -- --check --files-with-diff
       - cargo clippy --no-deps
   msrv:
