--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,14 +3,14 @@ match_block_trailing_comma = true
 use_field_init_shorthand = true
 use_try_shorthand = true
 # Nightly
-condense_wildcard_suffixes = true
-format_code_in_doc_comments = true
-format_macro_matchers = true
-format_strings = true
-group_imports = "StdExternalCrate"
-imports_granularity = "Crate"
-imports_layout = "Vertical"
-normalize_doc_attributes = true
-overflow_delimited_expr = true
-reorder_impl_items = true
-wrap_comments = true
+#condense_wildcard_suffixes = true
+#format_code_in_doc_comments = true
+#format_macro_matchers = true
+#format_strings = true
+#group_imports = "StdExternalCrate"
+#imports_granularity = "Crate"
+#imports_layout = "Vertical"
+#normalize_doc_attributes = true
+#overflow_delimited_expr = true
+#reorder_impl_items = true
+#wrap_comments = true
