--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Get IMDb IDs using a commandline search tool"
 categories = ["command-line-utilities"]
 version = "3.0.5"
 edition = "2021"
-rust-version = "1.64"
+rust-version = "1.70"
 authors = ["alpha-tango-kilo <git@heyatk.com>"]
 readme = "README.md"
 license = "GPL-3.0-only"
@@ -12,15 +12,16 @@ homepage = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"
 
 [dependencies]
-bitflags = "1.3"
-crossterm = "0.25"
-dirs = "4.0"
+bitflags = "2.3"
+crossterm = "0.26"
+dirs = "5.0"
 humantime = "2.1"
 itertools = "0.10"
 jsonxf = "1.1"
 lazy-regex = "2.2"
-opener = "0.5"
+opener = "0.6"
 once_cell = "1.12"
+ratatui = "0.21"
 serde_json = "1.0"
 # https://rustsec.org/advisories/RUSTSEC-2018-0005.html
 serde_yaml = { version = ">=0.8.4", optional = true }
@@ -28,7 +29,6 @@ serde_yaml = { version = ">=0.8.4", optional = true }
 smallvec = ">=1.6.1"
 thiserror = "1.0"
 trim-in-place = "0.1"
-tui = "0.19"
 urlencoding = "2.1"
 
 [dependencies.clap]
